# MForce

./: .gitignore  CMakeLists.txt  README.md  claude.md
.claude/: settings.local.json
docs/: ComposerRefactor3.md  Parked.txt  composition_design.md  figure_builder_redesign.md  mforce_ui.md  pitch_modulation_design.md  plan_2026_04_09.md  ui_phase2and4.md  ui_plan.md
engine/: CMakeLists.txt
engine/include/mforce/: additive_source.h  additive_source2.h  chord.h  combined_source.h  compose.h  dsp_value_source.h  dsp_wave_source.h  envelope.h  equal_temperament.h  figures.h  filters.h  fm_source.h  formant.h  full_additive_source.h  hybrid_ks_source.h  instrument.h  mixer.h  multi_source.h  music.h  patch_loader.h  pitch_reader.h  players.h  pulse_source.h  range_source.h  red_noise_source.h  saw_source.h  sequence.h  sine_source.h  structure.h  triangle_source.h  var_source.h  vibrato.h  wander_noise_source.h  wave_evolution.h  wavetable_source.h  white_noise_source.h
engine/include/mforce/core/: dsp_value_source.h  dsp_wave_source.h  envelope.h  envelope_presets.h  multi_source.h  randomizer.h  range_source.h  render_context.h  smoothness_interpolator.h  source_registry.h  var_source.h
engine/include/mforce/filter/: filters.h  vibrato.h
engine/include/mforce/music/: alternating_figure_strategy.h  basics.h  chord_progression_builder.h  chord_walker.h  classical_composer.h  compose.h  composer.h  conductor.h  default_strategies.h  drift_voicing_profile_selector.h  dun_parser.h  dynamic_state.h  elaborated_phrase_strategy.h  figure_constraints.h  figure_transforms.h  figures.h  harmony_composer.h  harmony_timeline.h  locus.h  music_json.h  parse_util.h  period_passage_strategy.h  phrase_strategies.h  piece_utils.h  pitch_bend.h  pitch_curve.h  pitch_reader.h  pitch_walker.h  players.h  random_figure_builder.h  random_voicing_profile_selector.h  realization_strategy.h  rhythm_util.h  rng.h  scripted_voicing_profile_selector.h  shape_figures.h  shape_strategies.h  smooth_voicing_selector.h  static_voicing_profile_selector.h  strategy.h  (+10 more)
engine/include/mforce/render/: instrument.h  limiter.h  mixer.h  patch_loader.h  wav_writer.h
engine/include/mforce/source/: combined_source.h  fitzhugh_nagumo_source.h  fm_source.h  gray_scott_source.h  homotopy_source.h  hybrid_ks_source.h  layered_red_noise_source.h  ldpc_source.h  markov_ode_source.h  mass_spring_source.h  micro_nn_source.h  multiplex_source.h  noise_sources.h  phased_value_source.h  pink_noise_source.h  pulse_source.h  red_noise_source.h  repeating_source.h  sat_dpll_source.h  saw_source.h  segment_source.h  self_avoiding_walk_source.h  self_rewriting_ast_source.h  sine_source.h  sort_oscillator.h  triangle_source.h  wander_noise_source.h  wave_evolution.h  wavetable_source.h  white_noise_source.h
engine/include/mforce/source/additive/: additive_source.h  additive_source2.h  basic_additive_source.h  formant.h  full_additive_source.h  partials.h
engine/src/: additive_source2.cpp  chord.cpp  full_additive_source.cpp  hybrid_ks_source.cpp  mixer.cpp  music.cpp  patch_loader.cpp  red_noise_source.cpp  source_registrations.cpp  source_registry.cpp  wav_writer.cpp  wavetable_source.cpp
patches/: PluckU.json  String1.json  TriTest.json  add_organ_test.json  add_saw_test.json  add_square_test.json  add_string_test.json  as2_bright_attack_test.json  as2_evolving_test.json  as2_mult3_ring_test.json  bend_test.json  (+112 more)
tools/durn_converter/: CMakeLists.txt  main.cpp
tools/durn_converter/parsers/: abc_parser.h  kern_parser.h  midi_parser.h  musicxml_parser.h
tools/mforce_ui/: CMakeLists.txt  main.cpp
(+94 files in other folders)
